--- a/babel.config.json
+++ b/babel.config.json
@@ -1,14 +1,15 @@
 {
   "presets": [
-    "@babel/preset-env",
-    "@babel/preset-react"
-  ],
-  "plugins": [
     [
-      "import",
+      "@babel/preset-env",
       {
-        "libraryName": "lodash"
+        "debug": false,
+        "useBuiltIns": "usage",
+        "corejs": "3"
       }
+    ],
+    [
+      "@babel/preset-react"
     ]
   ]
 }
