--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "serve": "serve -s dist",
     "build": "webpack --mode production --config webpack.prod.js",
-    "build:serve": "npm run build \n npx serve -s dist",
+    "build:serve": "npm run build\nnpm run serve",
+    "build:analyze": "cross-env BUNDLE_ANALYZE=true npm run build",
     "start": "webpack serve --node-env development --config webpack.dev.js",
-    "dev": "npm run start"
+    "dev": "npm run start",
+    "dev:analyze": "cross-env BUNDLE_ANALYZE=true npm run start"
   },
   "author": "",
   "license": "ISC",
@@ -17,12 +20,13 @@
     "babel-loader": "^9.0.0",
     "babel-plugin-import": "^1.13.5",
     "clean-webpack-plugin": "^4.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
-    "esbuild-loader": "^2.20.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
+    "serve": "^14.0.1",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.6",
     "webpack": "^5.74.0",
@@ -31,7 +35,20 @@
     "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0"
   },
+  "browserslist": {
+    "production": [
+      "> 0.3%",
+      "not dead"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "dependencies": {
+    "core-js": "^3.26.0",
+    "react-app-polyfill": "^3.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3"
   }
